--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Prioritized list of items",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "CONN=mongodb://localhost/northwind node seed/northwind-seed.js",
+    "test": "CONN=mongodb://localhost/northwind-test ./node_modules/mocha/bin/mocha",
+    "start": "gulp sass:watch & CONN=mongodb://localhost/northwind nodemon --ignore 'client/javascript/*.js' server"
   },
   "repository": {
     "type": "git",
@@ -12,6 +14,25 @@
   },
   "author": "Saif Tase",
   "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "cheerio": "^0.20.0",
+    "mocha": "^2.4.5",
+    "supertest": "^1.2.0",
+    "supertest-as-promised": "^3.0.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.3.4",
+    "body-parser": "^1.15.0",
+    "chalk": "^1.1.1",
+    "express": "^4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.2.0",
+    "mongoose": "^4.4.6",
+    "morgan": "^1.7.0",
+    "node-sass": "^3.4.2",
+    "swig": "^1.4.2"
+  },
   "bugs": {
     "url": "https://github.com/saiftase/Northwind/issues"
   },
